# physics-is-fun

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  content-collections.ts  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.specstory/history/: 2025-09-23_16-16Z-review-dependency-warnings-for-issues.md  2025-09-24_11-38Z-review-typescript-error-in-contentlayer-config.md  2025-09-24_12-35Z-design-color-schemes-for-blog-themes.md  2025-09-25_10-49Z-make-theme-transition-smoother.md  2025-09-25_11-29Z-implement-starry-background-animation.md  2025-09-25_13-11Z-improve-theme-switching-for-mdx-content.md  2025-09-25_14-29Z-fix-theme-flash-on-page-reload.md  2025-09-25_16-37Z-configure-prettier-for-file-formatting-on-save.md  2025-09-25_17-32Z-update-theme-toggle-animation-and-timing.md  2025-10-07_17-34Z-implement-constant-rotation-for-theme-toggle.md  2025-10-07_18-11Z-fix-theme-toggle-animation-issue.md  2025-10-07_18-49Z-fix-view-transition-for-theme-toggle.md  2025-10-08_11-12Z-fixing-wasm-pack-command-error.md  2025-10-08_12-15Z-creating-a-light-mode-background-design.md  2025-10-08_15-30Z-code-review-for-solar-system-component.md  2025-10-09_10-28Z-align-project-plan-for-black-hole-simulation.md  2025-10-14_16-22Z-simple-test-message.md  2025-10-15_11-00Z-understanding-order-value-in-black-hole-simulation.md  2025-10-16_11-41Z-review-project-summary-and-code-state.md  2025-10-16_13-29Z-review-project-status-and-math-issues.md  2025-10-16_18-47Z-update-integer-literals-to-float-in-charts-rs.md  2025-10-16_18-48Z-update-integer-literals-to-float-types.md  2025-10-16_19-35Z-developing-a-kerr-black-hole-analysis-plan.md  2025-11-05_11-39Z-enhancing-data-collection-for-black-hole-simulation.md
content/posts/: hello-world.mdx
docs/: MULTI_ORDER_IMPLEMENTATION_SUMMARY.md  TIER1_TESTING.md  enhanced_plan.md  new_plan.md  phase1_summary.md  phase2_summary.md  provenance_tracking.md  tailwindcss-animated-docs.md  tier1_summary.md  tier2_summary.md  tier3_summary.md
docs/post_1/: post_1_plan_draft.md  post_1_plan_final.md
kernels/double_slit/: Cargo.toml
kernels/double_slit/src/: lib.rs
kernels/kerr_black_hole/: Cargo.toml  build.rs
kernels/kerr_black_hole/src/: coordinates.rs  disc_model.rs  geodesic.rs  integration.rs  lib.rs  render.rs  transfer_maps.rs  types.rs  validation.rs
scripts/: build-wasm.js  build-wasm.mjs  init-theme.js  precompute-all.ps1  vercel-build.sh
src/app/: globals.css  layout.tsx  page.tsx
temp/1e-10/: outliers_critical_large_null_invariant_error.json  outliers_high_extreme_ni_statistical.json  (+3 more)
test/: test_output_1.md
(+20 files in other folders)
