[package]
name = "kerr_black_hole"
version = "0.1.0"
edition = "2021"

[lib]
# Library crate for the physics core
crate-type = ["rlib"]

[dependencies]
# No external dependencies needed for core physics
# We use f32/f64 (built-in types) for all computations

# CLI dependencies (only used by generate binary)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
rayon = "1.10"
flate2 = "1.0"

[[bin]]
name = "generate"
path = "src/bin/generate.rs"